<resources>
    <string name="app_name" translatable="false">track</string>
    <string name="title_activity_inspection_overview" translatable="false">InspectionOverview</string>
    <string name="currentlyInspecting" translatable="false">You are currently inspecting</string>
    <string name="username" translatable="false"> Employer ID: </string>
    <string name="password" translatable="false"> Password: </string>
    <string name="login" translatable="false"> Login </string>
    <string name="name" translatable="false"> P-Way Track Inspection App</string>
    <string name="remember" translatable="false">  Keep me signed in </string>
    <string name="forgetpw" translatable="false">  Forget Password? </string>
    <string name="sbslogo" translatable="false">  sbslogo </string>

    <string name="text_alcohol">Alcohol</string>
    <string name="text_coffee">Coffee</string>
    <string name="text_pasta">Pasta</string>
    <string name="text_cold_drinks">Cold Drinks</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="currentLog">Current logged defects:</string>
    <string name="title_activity_homepage3">homepage3</string>
    <string name="continue_inspection">Continue Inspection</string>
    <string name="tutorial_refresher">Tutorial Refresher</string>
    <string name="emergency">Emergency</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="good_evening">Good Evening</string>
    <string name="according_to_schedule">According to schedule, you are to inspect PGL-SKG</string>
    <string name="server_url">ec2-3-1-206-86.ap-southeast-1.compute.amazonaws.com</string>

    <string name="newinspectionmain1">You are about to start a new inspection!</string>
    <string name="newinspectionmain2">Please enter details:"</string>
    <string name="stationstart_prompt">Station Start:</string>
    <string name="stationend_prompt">Station End:</string>
    <string name="bound_prompt">Bound:</string>
    <string name="sectorcode_prompt">Sector Code:</string>
    <string name="accompany_prompt">Accompanied By:</string>

    <string-array name="stations_arrays">
        <item> </item>
        <item>Punggol</item>
        <item>Damai</item>
        <item>Oasis</item>
        <item>Kadaloor</item>
        <item>Riviera</item>
        <item>Coral Edge</item>
        <item>Meridian</item>
        <item>Cove</item>
        <item>Sam Kee</item>
        <item>Punggol Point</item>
        <item>Samudera</item>
        <item>Nibong</item>
        <item>Sumang</item>
        <item>Soo Teck</item>
    </string-array>

    <string-array name="left_or_right_array">
        <item> </item>
        <item>Left</item>
        <item>Right</item>
    </string-array>

    <string-array name="defect_array">
        <item> </item>
        <item>Spacing</item>
        <item>Crack</item>
        <item>Splinth</item>
    </string-array>

    <string-array name="yes_array">
        <item> </item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="tunnel_array">
        <item> </item>
        <item>Tunnel A</item>
        <item>Tunnel B</item>
    </string-array>

    <string-array name="dropmin_array">
        <item> </item>
        <item>Drop</item>
        <item>Minimum</item>
    </string-array>

    <string-array name="newcurrent_array">
        <item> </item>
        <item>New</item>
        <item>Current</item>
    </string-array>

    <string-array name="bound_arrays">
        <item> </item>
        <item>North</item>
        <item>South</item>
    </string-array>

    <string-array name="sector_arrays">
        <item> </item>
        <item>Sector 1</item>
        <item>Sector 2</item>
        <item>Sector 3</item>
    </string-array>

    <string-array name="accompany_array">
        <item> </item>
        <item>Tom</item>
        <item>Dick</item>
        <item>Harry</item>
    </string-array>

    <string-array name="sc_array">
        <item> </item>
        <item>SC1</item>
        <item>SC2</item>
        <item>SC3</item>
        <item>SC4</item>
        <item>SC5</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="railLouR">Rail (L/R)</string>
    <string name="chFr">CH Fr</string>
    <string name="cr8andUpload">Create and Upload</string>
    <string name="chTo">CH To</string>
    <string name="def_desc">Defect Description</string>
    <string name="point">Point</string>
    <string name="tunnel_clk">Tunnel Clk</string>
    <string name="drop_min">Drop/ Min</string>
    <string name="new_current">New/ Current</string>
    <string name="edit_others">Others</string>
    <string name="left_or_right_child_label_text">Left / Right Track:</string>
    <string name="point_label_text">Point:</string>
    <string name="tunnel_label_text">Tunnel:</string>
    <string name="drop_min_label_text">Drop / Min:</string>
    <string name="sc_label_text">SC Rating: </string>
    <string name="others_label_text">Others:</string>
    <string name="new_current_label_text">New / Current:</string>
</resources>
